adding MPI versions of count friends program

--- a/IN3200_HE2_15120/Makefile
+++ b/IN3200_HE2_15120/Makefile
@@ -2,12 +2,16 @@ CFLAGS = -Wall -g -O2
 LDFLAGS = -lm 
 
 FILES  = serial_main.c count_friends_of_ten.c count_friends_of_ten.h 
+FILES_MPI = mpi_main.c mpi_count_friends_of_ten.c mpi_count_friends_of_ten.h
 
 
-HALVARD: $(FILES)
+halvard: $(FILES)
 	gcc $(CFLAGS) -o halvard $(FILES) $(LDFLAGS)
 
+mpi: $(FILES_MPI)
+	mpicc $(CFLAGS) -o halvard_mpi $(FILES_MPI) $(LDFLAGS)
 
 
-CLEAN:
-	rm -f halvard
+clean:
+	rm -f halvard	
+	rm -f halvard_mpi
